# torchscalers

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  coverage.xml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api.rst  conf.py  examples.rst  index.rst  installation.rst
examples/: lightning_example.py  pytorch_example.py
src/torchscalers/: __init__.py  log.py  maxabs.py  minmax.py  mixed_domain.py  per_domain.py  robust.py  scaler.py  shift_scale.py  zscore.py
tests/: test_log.py  test_maxabs.py  test_minmax.py  test_mixed_domain.py  test_per_domain.py  test_robust.py  test_shift_scale.py  test_zscore.py
