[project]
name = "torchscalers"
version = "0.1.0"
description = "A simple collection of scalers for PyTorch pipelines."
keywords = ["pytorch", "scaler", "normalization", "machine learning", "deep learning"]
readme = "README.md"
authors = [
    { name = "Daniel Paukner", email = "contact.pauknerd@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "numpy",
]
examples = [
    "lightning>=2.0",
]
docs = [
    "sphinx>=8.0",
    "sphinx_rtd_theme>=2.0",
    "sphinx-autodoc-typehints>=2.0",
]

[project.urls]
Homepage = "https://github.com/pauknerd/torchscalers"
Repository = "https://github.com/pauknerd/torchscalers"
Documentation = "https://pauknerd.github.io/torchscalers"
"Bug Tracker" = "https://github.com/pauknerd/torchscalers/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=torchscalers --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.ruff.lint]
select = ["E", "F", "I"]
